edit on contact page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -648,18 +648,8 @@ button:hover {
 .main-content .description {}
 /* HEADER CONTACT US */
 
-.header__contact {
-    width: 100%;
-    min-height: 80vh;
-    background-image: url('https://scontent-mia3-2.xx.fbcdn.net/v/t39.30808-6/271554328_154246760276422_7525582486259297642_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=e3f864&_nc_ohc=ioyTERGOKiMAX_OEgjh&_nc_ht=scontent-mia3-2.xx&oh=00_AT-eh7k91eO0epP8skIynQ2s7p-EtbDQ-EcReEUK2K9ByA&oe=62204AD2');
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-attachment: fixed;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    position: relative;
-}
+
+/* .header__contact {} */
 
 .title__contact-us {
     color: #8C339F;
@@ -667,25 +657,12 @@ button:hover {
     font-style: italic;
     font-weight: bold;
     background: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%);
-}
-
-
-/* MAIN CONTACT US */
-
-.main__contact {
-    /* position: relative; */
 }
 
 
 /* CONTAINER CARDS CONTACT US */
 
 .cards__contact {
-    position: relative;
-    top: -90px;
     display: grid;
     grid-template-columns: repeat(4, 250px);
     gap: 20px;
@@ -753,12 +730,41 @@ span {
 }
 
 
+/* SOCIAL NETWORK  */
+
+.title-network-contact {
+    color: #8C339F;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.social-network-contact {
+    margin: 40px 0;
+}
+
+.social-network-contact ul li {
+    color: #fff;
+    background: #8C339F;
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+    padding: 0 15px;
+    border: outset;
+    border-radius: 10px;
+}
+
+.social-network-contact ul li i {
+    font-size: 40px;
+}
+
+
 /* CONTAINER FORM */
 
 .container__form {
     width: 100%;
     display: flex;
     height: 90vh;
+    padding: 50px;
 }
 
 
@@ -778,7 +784,10 @@ span {
     font-size: 40px;
     text-align: center;
     text-transform: uppercase;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
+    color: #8C339F;
+    font-weight: bold;
+    font-style: italic;
 }
 
 .input__name--contact,
@@ -786,10 +795,10 @@ span {
 .input__message--contact {
     width: 100%;
     outline: none;
-    border: none;
-    /* border-bottom: 4px solid #670b6aaa; */
-    border-bottom: 4px solid #0006;
-    background-color: #eee;
+    border: 1px solid #eee;
+    border-radius: 5px;
+    /* border-bottom: 4px solid #0006; */
+    /* background-color: #eee; */
     padding: 10px 5px;
     font-size: 18px;
 }
@@ -824,15 +833,12 @@ span {
     height: 40px;
     border: none;
     border-radius: 32px;
-    /* background-color: #670b6acc; */
-    background-color: #000c;
+    background-color: #8C339F;
     color: #fff;
     font-size: 18px;
 }
 
 .input__send--contact:hover {
-    /* background-color: #6d1170; */
-    /* background-color: #670b6a; */
     background-color: #000;
 }
 
@@ -877,49 +883,22 @@ span {
 }
 
 
-/* RESPONSIVE DESIGN */
+/* contact section */
 
-@media only screen and (max-width: 992px) {
-    .cards__contact {
-        grid-template-columns: repeat(4, 200px);
-        gap: 10px;
-    }
-    .contact__items {}
+.contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-@media only screen and (max-width: 768px) {
-    .title__contact-us {
-        font-size: 70px;
-    }
-    .cards__contact {
-        grid-template-columns: repeat(2, 250px);
-    }
-    .container__form {
-        display: block;
-    }
-    .form__contact {
-        width: 100%;
-        margin-bottom: 40px;
-        height: auto;
-    }
-}
 
-@media only screen and (max-width: 600px) {
-    .header__contact {
-        display: flex;
-        background-size: contain;
-        min-height: 60vh;
-    }
-    .title__contact-us {
-        font-size: 40px;
-        top: 30%;
-    }
-    .cards__contact {
-        display: block;
-    }
-    .contact__items {
-        margin-top: 20px;
-    }
+/*  */
+
+.scroll-mandatory {
+    scroll-behavior: smooth;
+    -ms-scroll-snap-type: y mandatory;
+        scroll-snap-type: y mandatory;
 }
 /* Bootstrap */
 
@@ -932,6 +911,7 @@ span {
 /* AOS */
 
 /* Font */
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -942,3 +922,4 @@ span {
 body {
     overflow-x: hidden;
 }
+
